
include_directories(
  basic
)

add_subdirectory(NNCNNLabeler)
add_subdirectory(NNCNNMLLabeler)
add_subdirectory(NNRNNLabeler)
add_subdirectory(NNRNNMLLabeler)
add_subdirectory(NNGRNNMLLabeler)
add_subdirectory(NNBiRNNLabeler)
add_subdirectory(NNBiGRNNLabeler)
add_subdirectory(NNBiLSTMLabeler)
add_subdirectory(NNGRNNLabeler)
add_subdirectory(NNLSTMLabeler)
add_subdirectory(NNLSTMMLLabeler)
add_subdirectory(NNCNNCharLabeler)