
include_directories(
  basic
)

add_subdirectory(NNCNNLabeler)
add_subdirectory(NNCNNMLLabeler)
add_subdirectory(NNRNNLabeler)
add_subdirectory(NNRNNMLLabeler)
add_subdirectory(NNRNNCharLabeler)
add_subdirectory(NNGRNNCharLabeler)
add_subdirectory(NNGRNNMLLabeler)
add_subdirectory(NNBiRNNLabeler)
add_subdirectory(NNBiGRNNLabeler)
add_subdirectory(NNBiLSTMLabeler)
add_subdirectory(NNGRNNLabeler)
add_subdirectory(NNLSTMLabeler)
add_subdirectory(NNLSTMMLLabeler)
add_subdirectory(NNLSTMCharLabeler)
add_subdirectory(NNCNNCharLabeler)
add_subdirectory(NNCNNMLCharLabeler)

add_subdirectory(NNBiRNNCharLabeler)
add_subdirectory(NNBiGRNNCharLabeler)
add_subdirectory(NNBiLSTMCharLabeler)
add_subdirectory(NNBiGRNNMLCharLabeler)

